--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,16 @@
 {
+  "editor.detectIndentation": false,  
+  "editor.insertSpaces": false,
+  "editor.indentSize": "tabSize",
   "editor.tabSize": 2,
-  "cSpell.language": "en,en-US"
+  "editor.useTabStops": true,  
+  "window.zoomLevel": 3.2,
+  "editor.fontSize": 16,
+  "editor.fontFamily": "Consolas, 'Courier New', monospace",
+  "editor.mouseWheelZoom": true,
+  "editor.mouseWheelScrollSensitivity": 1.5,
+  "editor.minimap.enabled": false,
+  "terminal.integrated.mouseWheelZoom": true,
+  "terminal.integrated.mouseWheelScrollSensitivity": 6,
+  "terminal.integrated.fontSize": 15 
 }
